--- a/server/views/about.jade
+++ b/server/views/about.jade
@@ -1,7 +1,7 @@
 html
   head
     title
-      | Favorites a Hotels and Restaurants Category Flat Bootstrap Responsive Website Template | About :: w3layouts
+      | Dabbawala Service
     // fonts
     link(href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic', rel='stylesheet', type='text/css')
     link(href='http://fonts.googleapis.com/css?family=Slabo+27px', rel='stylesheet', type='text/css')
@@ -44,9 +44,13 @@ html
               li
                 a(href='/login') Login
               |  |
-
               li
                 a(href='/register') Register
+          .header-right
+            ul
+              li
+                a(href='/adlogin') Admin Login
+
           
           
           .clearfix
@@ -61,6 +65,8 @@ html
                 img(src='images/menu.png', alt='')
               ul.nav1
                 li
+                  p .
+                li
                   a(href='/') HOME
                 li
                   a.active(href='/about') ABOUT
@@ -68,8 +74,7 @@ html
                   a(href='/ourmenu') OUR MENU
                 li
                   a(href='/gallery') GALLERY
-                li
-                  a(href='/contact') CONTACT
+    
                 .clearfix
               // script for menu
               script.
@@ -175,17 +180,7 @@ html
         .col-md-3.footer-grid
           h3
             a(href='#') Dabbawala
-        .col-md-3.footer-grid
-          h4 BUFFET
-          p
-            | MONDAY - THURSDAY
-            span 7 : 00 - 21 : 00
-        .col-md-3.footer-grid
-          h4 ORDERS
-          p
-            | MONDAY - SUNDAY
-            span 7 : 00 - 21 : 00
-        .col-md-3.footer-grid
+        .col-md-3.footer-grid.footer-right
           h4 ADDRESS
           ul Flowers Street,Andheri.
             li.list-one 
