--- a/server/views/admin.jade
+++ b/server/views/admin.jade
@@ -1,56 +1,135 @@
-html(lang='en')
+html
   head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
+    title
+      | Dabbawala Service
+    // fonts
+    link(href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Slabo+27px', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700', rel='stylesheet', type='text/css')
+    // //fonts
+    link(href='css/bootstrap.css', rel='stylesheet')
+    link(href='css/style.css', rel='stylesheet', type='text/css', media='all')
+    // for-mobile-apps
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title Jade
-    link(href='/vendor/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-    link(href="/favicon.ico", rel="shortcut icon", type="image/x-icon")
-    link(href="/vendor/toastr/toastr.min.css" rel="stylesheet")  
-    link(href="/css/main.css" rel="stylesheet")  
+    meta(http-equiv='Content-Type', content='text/html; charset=utf-8')
+    meta(name='keywords', content='Favorites Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, \
+    Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design')
+    script(type='application/x-javascript').
+      addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); }
+    // //for-mobile-apps
+    // js
+    script(type='text/javascript', src='js/jquery.min.js')
+    // js
+    
+    // start-smoth-scrolling
+    script(type='text/javascript', src='js/move-top.js')
+    script(type='text/javascript', src='js/easing.js')
+    script(type='text/javascript').
+      jQuery(document).ready(function($) {
+      $(".scroll").click(function(event){
+      event.preventDefault();
+      $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+      });
+      });
+    // start-smoth-scrolling
   body
-    header
-      nav.navbar.navbar-inverse.navbar-fixed-top
-        .container-fluid
-          .navbar-header
-            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
-            span.sr-only Toggle navigation         
-            span.icon-bar         
-            span.icon-bar
-            span.icon-bar
-            a.navbar-brand(href='/') Dabbawala Service
-          #bs-example-navbar-collapse-1.collapse.navbar-collapse
-            ul.navbar-right
+    // header
+    .header
+      .container
+        .top-header
+          .header-left
+            p Dabbawala Service
+          .login-section
+            ul
               li
-                a(href='/signout') Sign Out  
+                a(href='/signout') Log Out
+          
+          
+          .clearfix
+    // //header
+    // banner
+    
+    .container
+      .row
+        .col-md-6.col-md-offset-4
+            
+          form(action='/checkin' method='post')
+            input.form-control(type='' placeholder='Enter tiffin code' name="tiffinBarcode")
+            input.form-control(type='' placeholder='Enter bag code' name="bagBarcode")
 
-        .container
-            .jumbotron
-              h1 Welcome Admin !!!
+            button.a(href='/checkin') Check In
 
-            .row
-              .col-md-6
-                .panel.panel-primary
-                  .panel-heading.text-center Checked In
-                  .panel-body
-                    each val in Checkedin
-                        .row
-                          .col-md-4
-                            p=tiffin.tiffinBarcode
-                          .col-md-4
-                            p=bag.bagBarcode
-                          .col-md-4
-                            p=bag.address
+          form(action='/checkout' method='post')
+            input.form-control(type='' placeholder='Enter tiffin code' name="tiffinBarcode")
+            input.form-control(type='' placeholder='Enter bag code' name="bagBarcode")
+  
+            button.a(class='button' href='/checkout') Check Out
 
-              .col-md-6
-                .panel.panel-primary
-                  .panel-heading.text-center Checked Out
-                  .panel-body
-                    each val in Checkedout
-                      .row
-                          .col-md-4
-                            p=tiffin.tiffinBarcode
-                          .col-md-4
-                            p=bag.bagBarcode
-                          .col-md-4
-                            p=bag.address
+    // footer-top
+    .footer-top
+      .container
+        .col-md-3.footer-grid
+          h3
+            a(href='#') Dabbawala
+        .col-md-3.footer-grid
+          h4 BUFFET
+          p
+            | MONDAY - THURSDAY
+            span 7 : 00 - 21 : 00
+        .col-md-3.footer-grid
+          h4 ORDERS
+          p
+            | MONDAY - SUNDAY
+            span 7 : 00 - 21 : 00
+        .col-md-3.footer-grid
+          h4 ADDRESS
+          ul Flowers Street,Andheri.
+            li.list-one 
+            li.list-two
+              a(href='mailto:info@example.com') Dabbawala@gmail.com
+            li.list-three +8 800 555 555 55
+        .clearfix
+    // //footer-top
+    // footer
+    .footer
+      .container
+        .footer-left
+          p
+            | © Dabbawala Service
+        .footer-right
+          ul
+            li
+              a.twitter(href='#')  
+            li
+              a.facebook(href='#')  
+            li
+              a.chrome(href='#')  
+            li
+              a.pinterest(href='#')  
+            li
+              a.linkedin(href='#')  
+            li
+              a.dribbble(href='#')  
+        .clearfix
+    // //footer
+    // smooth scrolling
+    script(type='text/javascript').
+      $(document).ready(function() {
+      /*
+      var defaults = {
+      containerID: 'toTop', // fading element id
+      containerHoverID: 'toTopHover', // fading element hover id
+      scrollSpeed: 1200,
+      easingType: 'linear'
+      };
+      */
+      $().UItoTop({ easingType: 'easeOutQuart' });
+      });
+    a#toTop(href='#', style='display: block;')
+      span#toTopHover(style='opacity: 1;')  
+    // //smooth scrolling
+
+    script(type="text/javascript", src="/vendor/jquery/dist/jquery.js")
+    script(type="text/javascript", src="/vendor/bootstrap/dist/js/bootstrap.js")
+    script(type="text/javascript", src="/vendor/toastr/toastr.min.js")
+
