--- a/server/views/contact.jade
+++ b/server/views/contact.jade
@@ -42,67 +42,22 @@ html
           .login-section
             ul
               li
-                a(href='/login') Login
-              |  |
-              li
-                a(href='/register') Register
-          
-          
-          .clearfix
-    // //header
-    // banner
-    .banner-slider
-      .banner-pos
-        .banner.one.page-head
-          .container
-            .navigation.text-center
-              span.menu
-                img(src='images/menu.png', alt='')
-              ul.nav1
-                li
-                  a(href='/') HOME
-                li
-                  a(href='/about') ABOUT
-                li
-                  a(href='/ourmenu') OUR MENU
-                li
-                  a(href='/gallery') GALLERY
-                li
-                  a.active(href='/contact') CONTACT
-                .clearfix
-              // script for menu
-              script.
-                $( "span.menu" ).click(function() {
-                $( "ul.nav1" ).slideToggle( 300, function() {
-                // Animation complete.
-                });
-                });
-              // //script for menu
-            // point burst circle
-            .logo
-              a(href='/')
-                .burst-36
-                  div
-                    div
-                      span
-                        img(src='images/logo.png', alt='')
-                h1 DABBAWALA
-            // //point burst circle
-    // //banner
-    // contact-page
+                a(href='/signout') Log Out
+                
+                  
     .contact
       .container
         .contact-form
           .contact-info
-            h3 CONTACT FORM
+            h3  PLACE YOUR ORDER
             .strip-line
           form(action='/contact' method='post')
             .contact-left
-              input.form-control(type='email' placeholder='Email' name="email")
+              input.form-control(type='email' placeholder='Email' name="email" required)
               br
-              input.form-control(type='text' placeholder='Subject' name="subject")
+              input.form-control(type='text' placeholder='Address of the delivery' name="subject" required)
             .contact-right
-              textarea.form-control(type='text' placeholder='Message' name="message")
+              textarea.form-control(type='text' placeholder='Order Details' name="message" required)
             .clearfix
             button.btn.btn-default(type='submit') Submit
     // //contact-page
