--- a/server/views/gallery.jade
+++ b/server/views/gallery.jade
@@ -46,6 +46,10 @@ html
               |  |
               li
                 a(href='/register') Register
+          .header-right
+            ul
+              li
+                a(href='/adlogin') Admin Login
           
           
           .clearfix
@@ -60,6 +64,8 @@ html
                 img(src='images/menu.png', alt='')
               ul.nav1
                 li
+                  p .
+                li
                   a(href='/') HOME
                 li
                   a(href='/about') ABOUT
@@ -67,8 +73,7 @@ html
                   a(href='/ourmenu') OUR MENU
                 li
                   a.active(href='/gallery') GALLERY
-                li
-                  a(href='/contact') CONTACT
+        
                 .clearfix
               // script for menu
               script.
@@ -155,17 +160,7 @@ html
         .col-md-3.footer-grid
           h3
             a(href='#') Dabbawala
-        .col-md-3.footer-grid
-          h4 BUFFET
-          p
-            | MONDAY - THURSDAY
-            span 7 : 00 - 21 : 00
-        .col-md-3.footer-grid
-          h4 ORDERS
-          p
-            | MONDAY - SUNDAY
-            span 7 : 00 - 21 : 00
-        .col-md-3.footer-grid
+        .col-md-3.footer-grid.footer-right
           h4 ADDRESS
           ul Flowers Street,Andheri.
             li.list-one 
